Form Mustache para Detalhes e Eliminar
Adicionado mustache details.
Para visualizar detalhes de um contacto e para mostrar os dados todos ao eliminar.
Editar no proximo push

--- a/apirest/views/listall.mustache
+++ b/apirest/views/listall.mustache
@@ -8,6 +8,7 @@
     </header>
     <body>
         <h1>{{welcomeMessage}}</h1>
+				<h2><a href="./contacts/insert">Inserir</a></h2>
         <table>
             <tr>
                 {{#columns}}
@@ -21,6 +22,11 @@
                       {{value}}
                   </td>
                   {{/properties}}
+									{{#actions}}
+									<td>
+										<a href="{{link}}">{{label}}</a>
+									</td>
+									{{/actions}}
               </tr>
             {{/rows}}
         </table>
