Form Mustache para Editar [Template Complete]
Adicionado o necessário para editar através de um formulário
Template de APIREST com MongoDB e Páginas html em mustache completo.

--- a/apirest/views/details.mustache
+++ b/apirest/views/details.mustache
@@ -34,8 +34,8 @@
             <label>{{value}}</label>
         </div>
         {{/properties}}
+        <a href={{^delete}}"./"{{/delete}}{{#delete}}"../"{{/delete}}>Voltar</a>
         {{#delete}}
-              <a href="../">Voltar</a>
               <button type="button" onclick="deleteObj()">Eliminar</button>
         {{/delete}}
     </body>
