--- a/apirest/views/form.mustache
+++ b/apirest/views/form.mustache
@@ -2,6 +2,24 @@
     <head>
       <meta http-equiv="Content-type" content="text/html; charset=utf-8">
       <title>{{title}}</title>
+      {{#update}}
+      <script type="text/javascript">
+        function updateObj(){
+            var formData = new FormData(document.forms[0]);
+            var object = {};
+                formData.forEach(function(value, key){
+                    object[key] = value;
+                });
+            var json = JSON.stringify(object);
+            var request = new XMLHttpRequest();
+            request.open("PUT", "../{{updatelink}}");
+            request.setRequestHeader("Content-Type", "application/json;charset=UTF-8");
+            request.onload = function(){ alert (request.responseText); } // success case
+            request.onerror = function(){ alert (request.responseText); } // failure case
+            request.send(json);
+        }
+      </script>
+    {{/update}}
     </head>
     <header>
     </header>
@@ -12,16 +30,18 @@
       <div>
           <label >{{name}}:</label>
           {{^isDropdown}}
-          <input type={{type}} value="{{value}}" name="{{nameLower}}" {{#required}}required{{/required}}/>
+          <input type={{type}} value="{{value}}" name="{{nameLower}}" {{#required}}required {{/required}}/>
           {{/isDropdown}}
       </div>
       {{/properties}}
-        {{^edit}}
+        {{^update}}
+        <a href="./">Voltar</a>
         <input type="submit" value="Submit">
-        {{/edit}}
+        {{/update}}
     </form>
-        {{#edit}}
-        <input type="submit" value="Submit" onClick="putRquest()">
-        {{/edit}}
+        {{#update}}
+        <a href="../">Voltar</a>
+        <input type="submit" value="Editar" onClick="updateObj()">
+        {{/update}}
     </body>
 </html>
