--- a/apirest/views/listall.mustache
+++ b/apirest/views/listall.mustache
@@ -8,7 +8,7 @@
     </header>
     <body>
         <h1>{{welcomeMessage}}</h1>
-				<h2><a href="./contacts/insert">Inserir</a></h2>
+				<h2><a href="./insert">Inserir</a></h2>
         <table>
             <tr>
                 {{#columns}}
