Auto stash before rebase of "refs/heads/developer"
ProductBranch

--- a/apirest/views/form.mustache
+++ b/apirest/views/form.mustache
@@ -24,7 +24,7 @@
     <header>
     </header>
     <body>
-        <h1>{{formTitle}} {{formAction}}</h1>
+        <h1>{{formAction}} {{formTitle}}</h1>
     <form method="{{formMethod}}">
       {{#properties}}
       <div>
