--- a/apirest/views/listall.mustache
+++ b/apirest/views/listall.mustache
@@ -7,7 +7,7 @@
     <header>
     </header>
     <body>
-        <h1>{{welcomeMessage}}</h1>
+        <h1>{{welcomeMessage}} {{plus}}</h1>
 				<h2><a href="./insert">Inserir</a></h2>
         <table>
             <tr>
