--- a/apirest/views/details.mustache
+++ b/apirest/views/details.mustache
@@ -38,5 +38,8 @@
         {{#delete}}
               <button type="button" onclick="deleteObj()">Eliminar</button>
         {{/delete}}
+        {{^delete}}
+              <a href="./update/{{updateLink}}">Editar</a>
+        {{/delete}}
     </body>
 </html>
