--- a/apirest/views/form.mustache
+++ b/apirest/views/form.mustache
@@ -35,7 +35,7 @@
       <div>
           <label >{{name}}:</label>
           {{^isDropdown}}
-          <input type={{type}} value="{{value}}" name="{{nameLower}}" {{#required}}required {{/required}}/>
+          <input type="{{type}}" value="{{value}}" name="{{nameLower}}" {{#required}}required {{/required}}/>
           {{/isDropdown}}
       </div>
       {{/properties}}
