--- a/apirest/wwwroot/css/index.css
+++ b/apirest/wwwroot/css/index.css
@@ -1,6 +1,6 @@
 /*1920 - 1080 - Full HD*/
 header {
-  background-color: red;
+  background-color: rgb(255, 163, 26);
   height: 75px;
 }
 
@@ -8,10 +8,15 @@ body {
   background-color: lightblue;
   position: relative;
   margin: 0;
+  font-style: "Georgia", serif;
+}
+
+img {
+    width: 100%;
+    height: 100%;
 }
 
 #logo {
-  background-color: seagreen;
   min-width: 100px;
   width: 10%;
   height: 75px;
@@ -19,27 +24,90 @@ body {
 }
 
 #mainButtons {
-  background-color: orange;
   min-width: 500px;
   width: 70%;
   height: 75px;
   float: left;
 }
 
+#mainButtons a {
+    color: white;
+    text-decoration: none;
+    font-size: 40px;
+    text-align: center;
+    padding: 14px 16px;
+}
+
 #profile {
-  background-color: brown;
   min-width: 200px;
   width: 20%;
   height: 75px;
   float: left;
 }
 
+#profile a {
+    color: white;
+    text-decoration: none;
+    font-size: 40px;
+    text-align: center;
+    padding: 14px 16px;
+}
+
 #mainContent {
-  background-color: mediumpurple;
-  float: left;
-  min-width: 1000px;
+    background-color: mediumpurple;
+    float: left;
+    min-width: 1000px;
+    width: 100%;
+    height: 750px;
+    overflow-y:scroll;
+}
+
+#slideContent {
+    min-width: 1000px;
+    position: relative;
+    margin: auto;
+    height: 750px;
+}
+
+.slides {
+    min-width: 1000px;
+    width: 100%;
+    height: 750px;
+
+}
+
+#slideCaption {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
   width: 100%;
-  height: 750px;
+  text-align: center;
+}
+
+.previous, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+.previous:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
 }
 
 #contentleft {
