--- a/apirest/views/form.mustache
+++ b/apirest/views/form.mustache
@@ -8,6 +8,7 @@
             var formData = new FormData(document.forms[0]);
             var object = {};
                 formData.forEach(function(value, key){
+                  console.log(key +"|"+value);
                     object[key] = value;
                 });
             var json = JSON.stringify(object);
@@ -33,20 +34,17 @@
         }
         {{#fkeys}}
         function {{namefk}}List(){
+          console.log("called {{namefk}}");
           var request = new XMLHttpRequest();
           request.open("GET", "../{{namefk}}/dropdrown");
           request.onload = function(){
-            console.log(request.responseText);
               var obj = JSON.parse(request.responseText);
-              console.log(obj);
               var select = document.getElementById("{{namefk}}");
               for(var element in obj) {
-                console.log(element);
                   var option = document.createElement("option");
                   option.text = obj[element].name;
                   option.value = obj[element]._id;
                   select.appendChild(option);
-                  console.log(element._id);
               };
           }
           request.send();
@@ -76,7 +74,7 @@
     </head>
     <header>
     </header>
-    <body>
+    <body onload="callFunctions()">
         <h1>{{formAction}} {{formTitle}}</h1>
     <form method="{{formMethod}}">
       {{#properties}}
